force-app/main/default/objects/PWChrono_Job_Applicant__c/fields/Experience_Years__c.field-meta.xml
<CustomField>
    <fullName>Experience_Years__c</fullName>
    <label>Experience (Years)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>