force-app/main/default/objects/PWChrono_Job_Applicant__c/fields/Job_Opening__c.field-meta.xml
<CustomField>
    <fullName>Job_Opening__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Opening</label>
    <referenceTo>PWChrono_Job_Opening__c</referenceTo>
    <relationshipLabel>Job Applicants</relationshipLabel>
    <relationshipName>PWChrono_Job_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>