force-app/main/default/objects/PWChrono_Job_Applicant__c/fields/Portal_Users__c.field-meta.xml
<CustomField>
    <fullName>Portal_Users__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Users</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Job Applicant Portal Users</relationshipLabel>
    <relationshipName>Job_Applicant_Portal_Users</relationshipName>
    <type>Lookup</type>
</CustomField>