force-app/main/default/objects/PWChrono_Job_Applicant__c/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Referred Applicants</relationshipLabel>
    <relationshipName>PWChrono_Referred_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>