force-app/main/default/objects/PWChrono_Job_Applicant__c/listViews/Interview_Scheduled.listView-meta.xml
<ListView>
    <fullName>Interview_Scheduled</fullName>
    <columns>NAME</columns>
    <columns>Job_Opening__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Interview Scheduled,Interview in Progress</value>
    </filters>
    <label>Interview Scheduled</label>
</ListView>